More refactoring to DRY and to remove unused fields.